--- a/src/style.css
+++ b/src/style.css
@@ -1,54 +1,128 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,400;1,700&display=swap');
+
+:root {
+	--app-background: #EAEAEA;
+	--app-square: #2C3639;
+	--app-button: #06283D;
+	--app-active-letter: #47B5FF;
+}
+
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .App {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  
-  button {
-    padding: 20px 60px;
-    border: none;
-    background-color: #333;
-    color: aliceblue;
-    font-size: 25px;
-    cursor: pointer;
-  }
-  
-  .square {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
-    margin: 5px;
-  }
-  
-  .square span {
-    visibility: hidden;
-  }
-  
-  .letterbox {
-    display: flex;
-  }
-  
-  input {
-    height: 70px;
-    width: 70px;
-    margin: 20px;
-    font-size: 35px;
-  }
-  
-  .square[visible="visible"] {
-    background-color: green;
-  }
-  
-  .square[visible="visible"] span {
-    visibility: visible;
-  }
-  
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	background-color: var(--app-background);
+	font-family: 'Montserrat', sans-serif;
+}
+
+.App {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 600px;
+	max-width: 1000px;
+	text-align: center;
+	max-width: 768px;
+}
+
+button {
+	padding: 20px 60px;
+	margin: 5px;
+	border: none;
+	background-color: var(--app-button);
+	color: aliceblue;
+	font-size: 25px;
+	cursor: pointer;
+	border-radius: 8px;
+}
+
+.square {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 60px;
+	height: 50px;
+	margin: 5px;
+	background-color: var(--app-square);
+	border-radius: 8px;
+	font-size: 26px;
+	box-shadow: 3px 0px 33px -10px rgba(66, 68, 90, 1);
+	transition: box-shadow .5s;
+}
+
+.square span {
+	visibility: hidden;
+}
+
+.letterbox {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	border-top: 5px solid #000;
+	padding: 20px;
+}
+
+input {
+	height: 70px;
+	width: 70px;
+	margin: 20px;
+	font-size: 35px;
+	border-radius: 8px;
+	border: none;
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+	text-align: center;
+	transition: box-shadow .2s;
+}
+
+.square[visible='visible'] {
+	background-color: #7fadeb;
+	animation: anime 1s;
+}
+
+.square[visible='visible'] span {
+	visibility: visible;
+}
+
+.timer,
+.points {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 50px;
+	padding: 10px;
+	margin: 20px;
+	background-color: white;
+	font-weight: 700;
+	border: 1px solid rgb(187, 187, 187);
+	border-radius: 8px;
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+}
+
+.points {
+	left: 0;
+}
+
+@keyframes anime {
+	0% {
+		opacity: 0;
+		transform: rotateY(180deg);
+	}
+	100% {
+		opacity: 1;
+		transform: rotateY(0deg);
+	}
+}
+
+@media (max-width: 500px) {
+	body {
+		align-items: flex-start;
+	}
+
+	.square {
+		width: 40px;height: 40px;
+	}
+}
